# schedule_drf

./: Dockerfile  README.md  manage.py  pyproject.toml  requirements.txt
credit/: create_payment_schedule_views.py  models.py  serializers.py  update_payment_schedule_views.py  urls.py
credit/migrations/: 0001_initial.py  0002_remove_paymentschedule_payment_and_more.py  0003_remove_payment_payment_schedule_and_more.py  0004_rename_principle_payment_principal.py
schedule_drf/: asgi.py  settings.py  urls.py  wsgi.py
